<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HandInHand</string>
    <string name="hello_world">Hello world!</string>
    //for menu                                            <string name="action_settings">Settings</string>
    <string name="action_edit">Edit</string>
    <string name="action_search">Search</string>
    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_new">New</string>
    <string name="action_favorite">Favorite</string>
    //for drawer                                            <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_auth">AuthActivity</string>
    //for btn                                            <string name="login">登陆</string>
    <string name="logout">登出</string>
    <string name="register">注册</string>
    <string name="hangout">随便看看</string>
    <string name="back">返回</string>
    <string name="confirm">确认</string>
    <string name="comment_send">评论</string>
    //for form                                            <string name="username">用户名</string>
    <string name="nickname">昵称</string>
    <string name="password">密码</string>
    <string name="password2">确认密码</string>
    <string name="answer_content">写下你的回答</string>
    <string name="question_title">写下你的问题</string>
    <string name="question_content">添加对问题的补充说明</string>
    <string name="question_topic_selection">选择一个（或多个）分类</string>
    <string name="question_watch">关注</string>
    <string name="title_activity_question_edit">QuestionEditActivity</string>
    <string name="title_activity_question_list">QuestionListActivity</string>
    <string name="title_activity_question_item">QuestionItemActivity</string>
    <string name="title_activity_answer_edit">AnswerEditActivity</string>
    <string name="title_activity_answer_item">AnswerItemActivity</string>
    <string name="title_activity_comment_list">CommentListActivity</string>
    <string name="title_activity_user_info">UserInfoActivity</string>
    <string name="title_activity_user_edit">UserEditActivity</string>
    //for spinner                <string-array name="gender_array">
        <item>男</item>
        <item>女</item>
    </string-array>

    <string name="choose_gender">选择性别</string>
    <string name="title_activity_user_list">UserListActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="question">问题</string>
    <string name="answer">回答</string>
    <string name="comment">评论</string>
    <string name="title_activity_guide">GuideActivity</string>
    <string name="title_activity_welcome">WelcomeActivity</string>

</resources>
