<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/yellow200"
             tools:context="cn.edu.fudan.blueflamingo.handinhand.RegisterFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/handinhand_idea_large"
                android:layout_marginTop="48dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:layout_marginTop="48dp"
                android:textSize="36sp"
                android:layout_marginBottom="16dp"/>

            <EditText
                android:id="@+id/auth_form_username"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@drawable/abc_edit_text_material"
                android:textColor="@color/black"
                android:inputType="textFilter"
                android:hint="@string/username"
                android:textColorHint="@color/primary_text_disabled_material_light"/>

            <EditText
                android:id="@+id/auth_form_nickname"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="textFilter"
                android:background="@drawable/abc_edit_text_material"
                android:textColor="@color/black"
                android:hint="@string/nickname"
                android:textColorHint="@color/primary_text_disabled_material_light"/>

            <EditText
                android:id="@+id/auth_form_password"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@drawable/abc_edit_text_material"
                android:textColor="@color/black"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHint="@color/primary_text_disabled_material_light"/>

            <EditText
                android:id="@+id/auth_form_password2"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@drawable/abc_edit_text_material"
                android:textColor="@color/black"
                android:hint="@string/password2"
                android:inputType="textPassword"
                android:textColorHint="@color/primary_text_disabled_material_light" />

            <LinearLayout
                android:id="@+id/auth_choice_form"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="36dp"
                android:orientation="horizontal">

                <com.gc.materialdesign.views.ButtonFlat
                    android:id="@+id/auth_btn_confirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/yellow900"
                    android:text="@string/confirm"
                    android:padding="16dp"
                    android:layout_marginBottom="48dp" />

                <com.gc.materialdesign.views.ButtonFlat
                    android:id="@+id/auth_btn_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/primary_text_disabled_material_light"
                    android:text="@string/back"
                    android:padding="16dp"
                    android:layout_marginBottom="48dp" />

            </LinearLayout>

            </LinearLayout>

        </ScrollView>



</RelativeLayout>
