<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/yellow200"
        tools:context="cn.edu.fudan.blueflamingo.handinhand.AuthFragment" >

        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:src="@drawable/handinhand_large"
            android:layout_marginTop="48dp"
            android:layout_centerHorizontal="true"/>

        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/auth_btn_login"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:background="@color/yellow900"
            android:text="@string/login"
            android:layout_above="@+id/auth_btn_register"
            android:layout_centerHorizontal="true"/>

        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/auth_btn_register"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:background="@color/yellow900"
            android:text="@string/register"
            android:layout_above="@+id/auth_btn_hangout"
            android:layout_centerHorizontal="true"/>

        <com.gc.materialdesign.views.ButtonFlat
            android:id="@+id/auth_btn_hangout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/yellow900"
            android:text="@string/hangout"
            android:padding="16dp"
            android:layout_marginBottom="48dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"/>

</RelativeLayout>