<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/yellow200"
             tools:context="cn.edu.fudan.blueflamingo.handinhand.LoginFragment">

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/yellow200"
        tools:context="cn.edu.fudan.blueflamingo.handinhand.LoginFragment">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/auth_login_progressbar"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:visibility="gone"/>

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/handinhand_idea_large"
                android:layout_marginTop="64dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:text="@string/login"
                android:textSize="36sp"
                android:layout_marginBottom="16dp"
                android:layout_gravity="center_horizontal"/>

            <EditText
                android:id="@+id/auth_form_username"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@drawable/abc_edit_text_material"
                android:textColor="@color/black"
                android:layout_gravity="center_horizontal"
                android:singleLine="true"
                android:hint="@string/username"
                android:inputType="textFilter|textNoSuggestions"
                android:textColorHint="@color/primary_text_disabled_material_light"
                android:autoText="false" />

            <EditText
                android:id="@+id/auth_form_password"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@drawable/abc_edit_text_material"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColorHint="@color/primary_text_disabled_material_light" />

            <LinearLayout
                android:id="@+id/auth_choice_form"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="36dp"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <com.gc.materialdesign.views.ButtonFlat
                    android:id="@+id/auth_btn_confirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/yellow900"
                    android:text="@string/confirm"
                    android:padding="16dp"
                    android:layout_marginBottom="48dp" />

                <com.gc.materialdesign.views.ButtonFlat
                    android:id="@+id/auth_btn_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/primary_text_disabled_material_light"
                    android:text="@string/back"
                    android:padding="16dp"
                    android:layout_marginBottom="48dp" />

            </LinearLayout>

            </LinearLayout>

        </ScrollView>



</RelativeLayout>
